manifests/docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry
  name: docker-registry
  namespace: default

spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: docker-registry

  template:
    metadata:
      creationTimestamp: null
      labels:
        app: docker-registry

    spec:

      containers:
      - image: registry
        imagePullPolicy: Always
        name: docker-registry
        volumeMounts:
          - name: docker-reg-pvc
            mountPath: /registry-data
          - name: docker-auth-pvc
            mountPath: /auth
        ports:
          - containerPort: 5000

      volumes:
        - name: docker-reg-pvc
          persistentVolumeClaim:
            claimName: docker-reg-pvc
        - name: docker-auth-pvc
          persistentVolumeClaim:
            claimName: docker-auth-pvc
