manifests/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-reg-svc
spec:
  type: LoadBalancer
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
