manifests/docker-registry/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dockerreg-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`registry.alexbissessur.dev`)
    services:
    - name: docker-reg-svc
      port: 5000
  tls:
    certResolver: le
